# rusty-book-manager

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  package.json  playwright.config.ts
.github/workflows/: playwright.yml
adapter/: Cargo.toml
adapter/migrations/: 20251121132810_start.up.sql
adapter/src/database/model/: book.rs  checkout.rs
adapter/src/repository/: book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  user.rs  v1.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/_components/: BookTable.tsx  CheckoutHistory.tsx  Header.tsx  Pagination.tsx  UserTable.tsx
frontend/app/_contexts/: checkout.ts
frontend/app/_lib/: client.ts
frontend/app/_types/: book.ts
frontend/app/books/[id]/: page.tsx
frontend/app/books/[id]/edit/: page.tsx
frontend/app/books/checkouts/: page.tsx
frontend/app/books/checkouts/me/: page.tsx
frontend/app/books/create/: page.tsx
frontend/app/login/: page.tsx
frontend/app/users/: page.tsx
frontend/app/users/password/: page.tsx
kernel/: Cargo.toml
kernel/src/model/: list.rs
kernel/src/model/book/: mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/repository/: book.rs  checkout.rs
registry/src/: lib.rs
tests/: README.md
tests/auth/: login.spec.ts  logout.spec.ts
tests/fixtures/: auth.fixture.ts
tests/helpers/pages/: login-page.ts
