[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.75"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.89"
derive-new = "0.7.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
rstest = "0.18.2"
strum = { version = "0.27.2", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tower-http = { version = "0.6.6", features = ["trace"] }
garde = { version = "0.22.0", features = ["derive", "email"] }
redis = { version = "0.32.7", features = ["tokio-rustls-comp"] }
bcrypt = "0.17.1"
secrecy = "0.10.3"

[dependencies]
adapter.workspace = true
api.workspace = true
kernel.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
derive-new.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http.workspace = true
