[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = { version = "1.0.75", default-features = false }
axum = { version = "0.8.0", features = [
	"http1",
	"json",
	"query",
	"tokio",
], default-features = false }
sqlx = { version = "0.8.6", features = [
	"chrono",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio",
	"uuid",
], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
async-trait = "0.1.89"
derive-new = { version = "0.7.0", default-features = false }
uuid = { version = "1.18.1", features = [
	"serde",
	"v4",
], default-features = false }
serde = { version = "1.0.228", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
rstest = "0.18.2"
strum = { version = "0.27.2", features = ["derive"] }
tracing = { version = "0.1.41", default-features = false }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
garde = { version = "0.22.0", features = ["derive", "email"] }
redis = { version = "0.32.7", features = [
	"tokio-comp",
], default-features = false }
bcrypt = { version = "0.17.1", features = ["std"], default-features = false }
secrecy = "0.10.3"
axum-extra = { version = "0.12.2", features = [
	"typed-header",
], default-features = false }
chrono = { version = "0.4.42", features = ["serde"], default-features = false }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }

[dependencies]
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"fmt",
	"json"
], default-features = false }
tower-http.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
